parser/src/lexer/snapshots/enderpy_python_parser__lexer__lexer__tests__test-lexer-24.snap
---
source: parser/src/lexer/lexer.rs
description: "%="
---
[
    Token {
        kind: ModAssign,
        value: None,
        start: 0,
        end: 2,
    },
]
