parser/src/lexer/snapshots/enderpy_python_parser__lexer__lexer__tests__test-lexer-3.snap
---
source: parser/src/lexer/lexer.rs
description: +=2
---
[
    Token {
        kind: AddAssign,
        value: None,
        start: 0,
        end: 2,
    },
    Token {
        kind: Integer,
        value: Number(
            "2",
        ),
        start: 2,
        end: 3,
    },
]
